--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.M
 /Zirpl.Examples.Commerce.CodeGeneration/bin
 /Zirpl.Examples.Commerce.CodeGeneration/obj
 Zirpl.Examples.Commerce.CodeGeneration/Zirpl.Examples.Commerce.CodeGeneration.csproj.user
+Zirpl.Examples.Commerce.CodeGeneration/Zirpl.Examples.Commerce.Templates.csproj.user
