--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/Zirpl.Examples.Commerce.CodeGenerationConfig.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/Zirpl.Examples.Commerce.CodeGenerationConfig.csproj
@@ -47,9 +47,9 @@
       <Project>{f8855f9a-35d1-4c30-bb53-1fd89a984989}</Project>
       <Name>Zirpl.AppEngine.VisualStudioAutomation</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Zirpl.Examples.Commerce.CodeGeneration\Zirpl.Examples.Commerce.CodeGeneration.csproj">
+    <ProjectReference Include="..\Zirpl.Examples.Commerce.CodeGeneration\Zirpl.Examples.Commerce.Templates.csproj">
       <Project>{06f3d16b-a4fc-4fb1-9cdd-55b39ee7fafc}</Project>
-      <Name>Zirpl.Examples.Commerce.CodeGeneration</Name>
+      <Name>Zirpl.Examples.Commerce.Templates</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
