Now can auto-determine the file name, project, and folder based on the template type name

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.M
 /Zirpl.Examples.Commerce.CodeGeneration/obj
 Zirpl.Examples.Commerce.CodeGeneration/Zirpl.Examples.Commerce.CodeGeneration.csproj.user
 Zirpl.Examples.Commerce.CodeGeneration/Zirpl.Examples.Commerce.Templates.csproj.user
+Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/Zirpl.Examples.Commerce.CodeGenerationConfig.csproj.user
