--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
@@ -41,24 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="_auto\AddressBase.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="_auto\AddressBaseExtendedFieldValue.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="_auto\DomesticAddress.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="_auto\InternationalAddress.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="_auto\NamePrefixType.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="_auto\NamePrefixTypeEnum.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="_auto\AddressBase.cs" />
+    <Compile Include="_auto\AddressBaseExtendedFieldValue.cs" />
+    <Compile Include="_auto\DomesticAddress.cs" />
+    <Compile Include="_auto\InternationalAddress.cs" />
+    <Compile Include="_auto\NamePrefixType.cs" />
+    <Compile Include="_auto\NamePrefixTypeEnumEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
@@ -71,6 +59,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
