removed auto-creating of a DomainType instance of an enum

--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
@@ -47,7 +47,7 @@
     <Compile Include="_auto\InternationalAddress.cs" />
     <Compile Include="_auto\ModelExtensions.cs" />
     <Compile Include="_auto\NamePrefixType.cs" />
-    <Compile Include="_auto\NamePrefixTypeEnumEnum.cs" />
+    <Compile Include="_auto\NamePrefixTypeEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
