--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -115,9 +115,13 @@
     <Compile Include="AppGeneration\Config\Parsers\Json\PropertyJson.cs" />
     <Compile Include="AppGeneration\Config\Parsers\Json\RelationshipJson.cs" />
     <Compile Include="AppGeneration\Config\Relationship.cs" />
+    <Compile Include="AppGeneration\TextTemplating\OncePerAppTemplate.cs" />
+    <Compile Include="AppGeneration\TextTemplating\OncePerDomainTypeTemplate.cs" />
+    <Compile Include="AppGeneration\TextTemplating\OutputFileProvider.cs" />
+    <Compile Include="AppGeneration\TextTemplating\TemplateBase.cs" />
     <Compile Include="TextTemplating\ITextTransformation.cs" />
+    <Compile Include="TextTemplating\OutputFileExtensions.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
-    <Compile Include="TextTemplating\TextTransformationExtensions.cs" />
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
     <Compile Include="TextTemplating\TextTransformationContext.cs" />
     <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
