--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -100,9 +100,12 @@
     <Compile Include="AppGeneration\AppGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="AppGeneration\AppProvider.cs" />
     <Compile Include="AppGeneration\Config\App.cs" />
     <Compile Include="AppGeneration\Config\DomainProperty.cs" />
+    <Compile Include="AppGeneration\Config\DomainPropertyExtensions.cs" />
     <Compile Include="AppGeneration\Config\DomainType.cs" />
+    <Compile Include="AppGeneration\Config\DomainTypeExtensions.cs" />
     <Compile Include="AppGeneration\Config\EnumValue.cs" />
     <Compile Include="AppGeneration\Config\AppExtensions.cs" />
     <Compile Include="AppGeneration\Config\Parsers\ConfigFileException.cs" />
@@ -114,10 +117,17 @@
     <Compile Include="AppGeneration\Config\Parsers\Json\PropertyJson.cs" />
     <Compile Include="AppGeneration\Config\Parsers\Json\RelationshipJson.cs" />
     <Compile Include="AppGeneration\Config\Relationship.cs" />
+    <Compile Include="AppGeneration\TextTemplating\TemplateProvider.cs" />
+    <Compile Include="AppGeneration\TextTemplating\TemplateRunner.cs" />
     <Compile Include="AppGeneration\TextTemplating\OncePerAppTemplate.cs" />
     <Compile Include="AppGeneration\TextTemplating\OncePerDomainTypeTemplate.cs" />
     <Compile Include="AppGeneration\TextTemplating\OutputFileProvider.cs" />
     <Compile Include="AppGeneration\TextTemplating\TemplateBase.cs" />
+    <Compile Include="AppGeneration\_templates\ModelProject\DT_Enum_cs.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DT_Enum_cs.tt</DependentUpon>
+    </Compile>
     <Compile Include="TextTemplating\ITextTransformation.cs" />
     <Compile Include="TextTemplating\OutputFileExtensions.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
@@ -143,6 +153,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="AppGeneration\Config\Parsers\Json\sample domain.zae" />
+    <None Include="AppGeneration\_templates\ModelProject\DT_Enum_cs.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>DT_Enum_cs.cs</LastGenOutput>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
