--- a/Zirpl.Examples.Commerce.CodeGeneration/Zirpl.Examples.Commerce.CodeGeneration.csproj
+++ b/Zirpl.Examples.Commerce.CodeGeneration/Zirpl.Examples.Commerce.CodeGeneration.csproj
@@ -73,11 +73,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="_templates\ModelProject\DT_Enum_cs.cs">
-      <DependentUpon>DT_Enum_cs.tt</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <Compile Include="_templates\DT_cs.cs">
       <DependentUpon>DT_cs.tt</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -101,24 +96,18 @@
       <LastGenOutput>App.txt</LastGenOutput>
       <TransformOnBuild>True</TransformOnBuild>
     </None>
-    <None Include="_config\ModelProject\AddressBase.domain.zae">
+    <EmbeddedResource Include="_config\ModelProject\AddressBase.domain.zae">
       <SubType>Designer</SubType>
-    </None>
-    <None Include="_config\ModelProject\DomesticAddress.domain.zae">
+    </EmbeddedResource>
+    <EmbeddedResource Include="_config\ModelProject\DomesticAddress.domain.zae">
       <SubType>Designer</SubType>
-    </None>
-    <None Include="_config\ModelProject\InternationalAddress.domain.zae">
+    </EmbeddedResource>
+    <EmbeddedResource Include="_config\ModelProject\InternationalAddress.domain.zae">
       <SubType>Designer</SubType>
-    </None>
-    <None Include="_config\ModelProject\NamePrefixType.domain.zae" />
+    </EmbeddedResource>
+    <EmbeddedResource Include="_config\ModelProject\NamePrefixType.domain.zae" />
     <None Include="_config\ModelProject\Orders\ShipBatch.model.xml.exclude" />
     <None Include="_config\ModelProject\Orders\ShipBatchItem.model.xml.exclude" />
-    <None Include="_templates\ModelProject\DT_Enum_cs.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DT_Enum_cs.cs</LastGenOutput>
-      <FormatOutput>True</FormatOutput>
-      <TransformOnBuild>True</TransformOnBuild>
-    </None>
     <None Include="_templates\DT_cs.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>DT_cs.cs</LastGenOutput>
