--- a/Zirpl.Common.Tests/Zirpl.Common.Tests.csproj
+++ b/Zirpl.Common.Tests/Zirpl.Common.Tests.csproj
@@ -54,6 +54,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeExtensionsTests.cs" />
     <Compile Include="IO\StreamExtensionsTests.cs" />
     <Compile Include="Linq\QueryableWrapperTests.cs" />
     <Compile Include="NumberExtensionsTests.cs" />
