--- a/Zirpl.Examples.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
+++ b/Zirpl.Examples.Commerce.Model/Zirpl.Examples.Commerce.Model.csproj
@@ -41,12 +41,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="_auto\AddressBase.cs" />
-    <Compile Include="_auto\AddressBaseExtendedFieldValue.cs" />
-    <Compile Include="_auto\DomesticAddress.cs" />
-    <Compile Include="_auto\InternationalAddress.cs" />
-    <Compile Include="_auto\NamePrefixType.cs" />
-    <Compile Include="_auto\NamePrefixTypeEnum.cs" />
+    <Compile Include="_auto\AddressBase.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\AddressBaseExtendedFieldValue.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\DomesticAddress.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\InternationalAddress.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\NamePrefixType.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
+    <Compile Include="_auto\NamePrefixTypeEnum.cs">
+      <DependentUpon>App.txt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
@@ -60,6 +72,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="_auto\App.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
