lots of refactors to the API- now using interfaces for the major components. No longer have TextTransformationContext, no longer need explicit base classes for anything except the Master template

--- a/Zirpl.AppEngine/Zirpl.AppEngine.csproj
+++ b/Zirpl.AppEngine/Zirpl.AppEngine.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Ioc\Autofac\IAutofacDependencyResolver.cs" />
     <Compile Include="Ioc\DependencyResolverBase.cs" />
     <Compile Include="Ioc\IDependencyResolver.cs" />
+    <Compile Include="Logging\LogBase.cs" />
     <Compile Include="Logging\Common\CommonLogFactory.cs" />
     <Compile Include="Logging\Common\CommonLogWrapper.cs" />
     <Compile Include="Logging\ILog.cs" />
