--- a/Zirpl.AppEngine.Net45/Zirpl.AppEngine.Net45.csproj
+++ b/Zirpl.AppEngine.Net45/Zirpl.AppEngine.Net45.csproj
@@ -141,6 +141,9 @@
     <Compile Include="..\Zirpl.AppEngine\Logging\Log4Net\AsyncAppender.cs">
       <Link>Logging\Log4Net\AsyncAppender.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.AppEngine\Logging\LogBase.cs">
+      <Link>Logging\LogBase.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.AppEngine\Logging\LogManager.cs">
       <Link>Logging\LogManager.cs</Link>
     </Compile>
@@ -478,7 +481,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
+      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" />
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
