--- a/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -106,9 +106,7 @@
     <Compile Include="AppGeneration\Config\DomainProperty.cs" />
     <Compile Include="AppGeneration\Config\DomainPropertyExtensions.cs" />
     <Compile Include="AppGeneration\Config\DomainType.cs" />
-    <Compile Include="AppGeneration\Config\DomainTypeExtensions.cs" />
     <Compile Include="AppGeneration\Config\EnumValue.cs" />
-    <Compile Include="AppGeneration\Config\AppExtensions.cs" />
     <Compile Include="AppGeneration\Config\Parsers\ConfigFileException.cs" />
     <Compile Include="AppGeneration\Config\Parsers\DomainFileParser.cs" />
     <Compile Include="AppGeneration\Config\Parsers\Json\AppJson.cs" />
@@ -120,10 +118,7 @@
     <Compile Include="AppGeneration\Config\Relationship.cs" />
     <Compile Include="AppGeneration\TextTemplating\TemplateProvider.cs" />
     <Compile Include="AppGeneration\TextTemplating\TemplateRunner.cs" />
-    <Compile Include="AppGeneration\TextTemplating\OncePerAppTemplate.cs" />
-    <Compile Include="AppGeneration\TextTemplating\OncePerDomainTypeTemplate.cs" />
     <Compile Include="AppGeneration\TextTemplating\OutputFileProvider.cs" />
-    <Compile Include="AppGeneration\TextTemplating\TemplateBase.cs" />
     <Compile Include="AppGeneration\_templates\DT_cs.cs">
       <DependentUpon>DT_cs.tt</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -134,11 +129,17 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="Logging\LogFactory.cs" />
+    <Compile Include="Logging\OutputPaneLogWrapper.cs" />
+    <Compile Include="TextTemplating\IOutputFileManager.cs" />
+    <Compile Include="TextTemplating\IOutputFileProvider.cs" />
+    <Compile Include="TextTemplating\ITemplateProvider.cs" />
+    <Compile Include="TextTemplating\ITemplateRunner.cs" />
     <Compile Include="TextTemplating\ITextTransformation.cs" />
-    <Compile Include="TextTemplating\OutputFileExtensions.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
+    <Compile Include="TextTemplating\TemplateBase.cs" />
+    <Compile Include="TextTemplating\TextTransformationExtensions.cs" />
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
-    <Compile Include="TextTemplating\TextTransformationContext.cs" />
     <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
     <Compile Include="VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
