moved FileManager retrieval code to the ITextTransformation interface

--- a/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -136,6 +136,7 @@
     <Compile Include="TextTemplating\ITemplateProvider.cs" />
     <Compile Include="TextTemplating\ITemplateRunner.cs" />
     <Compile Include="TextTemplating\ITextTransformation.cs" />
+    <Compile Include="TextTemplating\ObjectExtensions.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
     <Compile Include="TextTemplating\TextTransformationExtensions.cs" />
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
