--- a/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -129,8 +129,8 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Include="Logging\LogFactory.cs" />
-    <Compile Include="Logging\OutputPaneLogWrapper.cs" />
+    <Compile Include="TextTemplating\Logging\LogFactory.cs" />
+    <Compile Include="VisualStudio\Logging\OutputPaneLogWrapper.cs" />
     <Compile Include="TextTemplating\IOutputFileManager.cs" />
     <Compile Include="TextTemplating\IOutputFileProvider.cs" />
     <Compile Include="TextTemplating\ITemplateProvider.cs" />
@@ -138,10 +138,11 @@
     <Compile Include="TextTemplating\ITextTransformation.cs" />
     <Compile Include="TextTemplating\ObjectExtensions.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
-    <Compile Include="TextTemplating\TextTransformationExtensions.cs" />
+    <Compile Include="VisualStudio\TextTransformationExtensions.cs" />
     <Compile Include="TextTemplating\TextTransformationWrapper.cs" />
     <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
-    <Compile Include="VisualStudioExtensions.cs" />
+    <Compile Include="TextTemplating\TextTransformationExtensions.cs" />
+    <Compile Include="VisualStudio\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextTemplating\OutputFile.cs" />
   </ItemGroup>
